syntax = "proto3";
package proto;
option go_package = "proto/chat";

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

message HandShakeRequest {
    string name = 1;
    int32 port = 2;
}

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc HandShake (HandShakeRequest) returns (HelloReply) {}
}


